--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+#Thu May 25 19:52:54 CEST 2017
 grailsVersion=3.2.9
+grailsWrapperVersion=1.0.0
 gormVersion=6.0.10.RELEASE
 gradleWrapperVersion=3.4.1
