--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -108,10 +108,38 @@ environments:
         dataSource:
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+        extendedMail:
+            host: smtp.gmail.com
+            from: your_name@gmail.com
+            port: 465
+            username: your_name@gmail.com
+            password: secret
+            props:
+              mail:
+                smtp:
+                  auth: true
+                  socketFactory:
+                    port: 465
+                    class: javax.net.ssl.SSLSocketFactory
+                    fallback: false
     test:
         dataSource:
             dbCreate: update
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+        extendedMail:
+            host: smtp.gmail.com
+            from: your_name@gmail.com
+            port: 465
+            username: your_name@gmail.com
+            password: secret
+            props:
+              mail:
+                smtp:
+                  auth: true
+                  socketFactory:
+                    port: 465
+                    class: javax.net.ssl.SSLSocketFactory
+                    fallback: false
     production:
         dataSource:
             dbCreate: none
